--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-/* CSS */
-.home-map {
+.top-buttons {
+  background: #fff;
   backface-visibility: hidden;
-  background: #332cf2;
-  border: 0;
   border-radius: .375rem;
+  border-style: solid;
+  border-width: .125rem;
   box-sizing: border-box;
-  color: #fff;
+  color: #000000;
   cursor: pointer;
   display: inline-block;
   font-family: Circular,Helvetica,sans-serif;
@@ -13,9 +13,8 @@
   font-weight: 700;
   letter-spacing: -.01em;
   line-height: 1.3;
-  padding: 1rem 1.25rem;
+  padding: .875rem 1.125rem;
   position: relative;
-  text-align: left;
   text-decoration: none;
   transform: translateZ(0) scale(1);
   transition: transform .2s;
@@ -24,25 +23,19 @@
   touch-action: manipulation;
 }
 
-.home-map:disabled {
-  color: #787878;
-  cursor: auto;
-}
-
-.home-map:not(:disabled):hover {
+.top-buttons:not(:disabled):hover {
   transform: scale(1.05);
 }
 
-.home-map:not(:disabled):hover:active {
+.top-buttons:not(:disabled):hover:active {
   transform: scale(1.05) translateY(.125rem);
 }
 
-.home-map:focus {
+.top-buttons:focus {
   outline: 0 solid transparent;
 }
 
-.home-map:focus:before {
-  border-width: .125rem;
+.top-buttons:focus:before {
   content: "";
   left: calc(-1*.375rem);
   pointer-events: none;
@@ -52,10 +45,27 @@
   user-select: none;
 }
 
-.home-map:focus:not(:focus-visible) {
+.top-buttons:focus:not(:focus-visible) {
   outline: 0 solid transparent;
 }
 
-.home-map:not(:disabled):active {
+.top-buttons:focus:not(:focus-visible):before {
+  border-width: 0;
+}
+
+.top-buttons:not(:disabled):active {
   transform: translateY(.125rem);
+}
+#home-map{
+    text-align: left;
+    align-content: left;
+    right: auto;
+}
+#projects-map {
+    text-align: right;
+    align-content: right;
+}
+#anonym-image-background {
+    size: 100px;
+    background-image: url();
 }
