--- a/style.css
+++ b/style.css
@@ -8,13 +8,12 @@
   color: #000000;
   cursor: pointer;
   display: inline-block;
-  font-family: Circular,Helvetica,sans-serif;
+  font-family: Courier;
   font-size: 1.125rem;
   font-weight: 700;
   letter-spacing: -.01em;
   line-height: 1.3;
   padding: .875rem 1.125rem;
-  position: relative;
   text-decoration: none;
   transform: translateZ(0) scale(1);
   transition: transform .2s;
@@ -56,16 +55,60 @@
 .top-buttons:not(:disabled):active {
   transform: translateY(.125rem);
 }
+body{
+  font-family: Courier;
+  background-color: #9a9a9a;
+
+}
 #home-map{
-    text-align: left;
-    align-content: left;
-    right: auto;
+  position: absolute;
+  left: 2%;
+  top: 2%;
 }
 #projects-map {
-    text-align: right;
-    align-content: right;
+  position: absolute;
+  right: 2%;
+  top: 2%;
 }
-#anonym-image-background {
-    size: 100px;
-    background-image: url();
+#about-map{
+  position: absolute;
+  right: 50%;
+  top: 2%;
+}
+#title-map{
+  position: absolute;;
+  right: middle;
+  top: 40px;;
+}
+#links{
+  position: absolute;
+  bottom: 10%;
+  left: 2%;
+}
+.background-box-top {
+  position: absolute;
+  border-radius: 10px;
+  top: 0%;
+  right: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+#discord-link{
+  position:absolute;
+  bottom: 2%;
+  left: 2%;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  padding: 10px;
+}
+#title-map{
+  position: absolute;
+  top: 30%;
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  border-radius: 20px;
+  padding-left: 35%;
+  
 }
